Center contact header in footer and resolve background xoom on mobile devices

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -421,6 +421,9 @@ footer {
 }
 
 @media (max-width: 550px) {
+    body {
+        height: 110vh;;
+    }
     .hero-section {
         padding-top: 10rem;
         gap: 2rem;
@@ -442,6 +445,9 @@ footer {
     }
     .footer-nav {
         width: 100%;
+    }
+    .footer-nav > h5 {
+        padding-left: 2rem;
     }
     .nav-list > .nav-item > .nav-link {
         text-align: center;
